.kube/flask-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: samplesite
  labels:
    app.kubernetes.io/name: flask
    app.kubernetes.io/component: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: flask
      app.kubernetes.io/component: web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flask
        app.kubernetes.io/component: web-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: flask
          image: ghcr.io/artikson/sample-site-flask
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: flask-port
          volumeMounts:
          - mountPath: /app/app/static/upload
            name: nfs-volume
      volumes:
      - name: nfs-volume
        nfs:
          server: debian-nfs
          path: /srv/cluster-storage/flask-data
      imagePullSecrets:
      - name: github-auth
