.kube/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: samplesite
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/component: web-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/component: web-server
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: nginx
          image: ghcr.io/artikson/sample-site-nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: nginx-port
      imagePullSecrets:
      - name: github-auth
