.kube/postgres-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/component: pg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: pg
    spec:
      containers:
      - name: postgres
        image: postgres:alpine
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
