.kube/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: samplesite
  labels:
    app.kubernetes.io/name: flask
    app.kubernetes.io/component: web-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: flask
    app.kubernetes.io/component: web-app
