.kube/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: samplesite
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: web-server
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: web-server
