.kube/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: samplesite
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: pg
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: pg
