.kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
  namespace: samplesite
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sample-site.4rt1ks0n.ru
    secretName: samplesite-tls
  rules:
  - host: sample-site.4rt1ks0n.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
status:
  loadBalancer:
    ingress:
    - ip: 192.168.91.110
